--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ to {opacity:1;}
 </div>
 
 <audio id="music" loop>
-<source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+<source src="music.mp3" type="audio/mpeg">
 </audio>
 
 <script>
