--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ body {
 margin:0;
 font-family:'Montserrat', sans-serif;
 text-align:center;
-color:#333;
+color:white;
 overflow-x:hidden;
-background:linear-gradient(135deg,#fffaf5,#fdf6e9,#ffffff);
+background: url('photo.jpg') center/cover no-repeat fixed;
 }
 
 /* Қазақы ою по краям */
