--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@ color:white;
 overflow-x:hidden;
 background: url('photo.jpg') center/cover no-repeat fixed;
 }
+  body::before {
+content:"";
+position:fixed;
+top:0;
+left:0;
+right:0;
+bottom:0;
+background:rgba(0,0,0,0.4);
+z-index:-1;
+}
 
 /* Қазақы ою по краям */
 body::before, body::after{
