--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ font-family:'Montserrat', sans-serif;
 text-align:center;
 color:white;
 overflow-x:hidden;
-background: url('photo.jpg') center/cover no-repeat fixed;
+background: url('photo.jpg') no-repeat center center fixed;
+background-size: cover;
 }
   body::before {
 content:"";
