--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@ transform:scale(1.05);
 /* Секция */
 .section {
 padding:80px 20px;
-background:white;
+background: rgba(0,0,0,0.6);
+color:white;
+backdrop-filter: blur(5px);
 }
 
 iframe {
