--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ to{opacity:1;}
 
 <div class="hero-text">
 <h1>Алмаз & Данагүл</h1>
-<p>10.07.2026 • Ақсу</p>
+<p>10.07.2026 • Үйлену той</p>
 </div>
 
 </div>
