--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <style>
 body{
 margin:0;
-font-family:'Montserrat', sans-serif;
+font-family:'Cormorant Garamond', serif;
 overflow-x:hidden;
 background:#000;
 }
