--- a/index.html
+++ b/index.html
@@ -38,14 +38,11 @@ background:linear-gradient(to bottom, rgba(0,0,0,0.3), rgba(0,0,0,0.6));
 }
 
 /* Текст */
-.hero-text{
-position:absolute;
-top:50%;
-left:50%;
-transform:translate(-50%,-50%);
-color:white;
-text-align:center;
-animation:fadeIn 3s ease;
+.hero-text h1{
+font-family:'Great Vibes', cursive;
+font-size:54px;
+margin:0;
+letter-spacing:2px;
 }
 
 .hero-text h1{
