--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ transform:translateY(110vh) rotate(360deg);
 <!-- VIDEO -->
 <div class="hero">
 <video autoplay muted loop playsinline>
-<source src="video.mp4.mp4" type="video/mp4">
+<source src="video.mp4" type="video/mp4">
 </video>
 <div class="overlay"></div>
 <div class="hero-text">
@@ -191,7 +191,7 @@ transform:translateY(110vh) rotate(360deg);
 
 <!-- MUSIC -->
 <audio id="music" loop>
-<source src="music.mp3" type="audio/mpeg">
+<source src="music.mp3.mp3" type="audio/mpeg">
 </audio>
 
 <div class="music-btn" onclick="toggleMusic()">🎵</div>
