--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Алмаз & Данагүл</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Cormorant+Garamond:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Cormorant+Garamond:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
 body{
@@ -49,8 +49,9 @@ animation:fadeIn 3s ease;
 }
 
 .hero-text h1{
-font-family:'Great Vibes', cursive;
-font-size:60px;
+font-family:'Parisienne', cursive;
+font-size:78px;
+letter-spacing:3px;
 margin:0;
 }
 
