--- a/index.html
+++ b/index.html
@@ -13,12 +13,40 @@ html{scroll-behavior:smooth;}
 body{
 margin:0;
 font-family:'Cormorant Garamond', serif;
-background:#f8f5ef;
+background: linear-gradient(135deg, #fdf8f3, #f6efe6);
 color:#5a4a42;
 overflow-x:hidden;
 }
 
-/* ===== VIDEO SECTION ===== */
+/* Орнаменты */
+body::before,
+body::after{
+content:"";
+position:fixed;
+width:200px;
+height:200px;
+background:url('https://i.imgur.com/5cX1K7Q.png') no-repeat center/contain;
+opacity:0.08;
+pointer-events:none;
+z-index:0;
+}
+body::before{top:0;left:0;}
+body::after{bottom:0;right:0;transform:rotate(180deg);}
+
+/* Золотое свечение */
+.glow{
+position:fixed;
+top:50%;
+left:50%;
+width:900px;
+height:900px;
+background:radial-gradient(circle, rgba(180,138,90,0.07), transparent 70%);
+transform:translate(-50%,-50%);
+pointer-events:none;
+z-index:0;
+}
+
+/* Видео */
 .hero{
 position:relative;
 height:100vh;
@@ -44,7 +72,7 @@ z-index:-2;
 content:"";
 position:absolute;
 top:0;left:0;right:0;bottom:0;
-background:rgba(0,0,0,0.4);
+background:rgba(0,0,0,0.45);
 z-index:-1;
 }
 
@@ -67,6 +95,8 @@ transform:translateY(50px);
 transition:1.2s;
 font-size:24px;
 line-height:1.8;
+position:relative;
+z-index:1;
 }
 
 .section.visible{
@@ -76,10 +106,10 @@ transform:translateY(0);
 
 .box{
 background:white;
-padding:40px;
+padding:45px;
 border-radius:30px;
 box-shadow:0 15px 40px rgba(0,0,0,0.06);
-max-width:700px;
+max-width:750px;
 }
 
 h2{
@@ -87,10 +117,10 @@ font-size:44px;
 margin-bottom:30px;
 }
 
-/* ===== CALENDAR ===== */
+/* Календарь */
 .calendar table{
 width:100%;
-max-width:500px;
+max-width:550px;
 border-collapse:collapse;
 font-size:28px;
 }
@@ -106,7 +136,7 @@ border-radius:50%;
 font-weight:bold;
 }
 
-/* ===== BUTTONS ===== */
+/* Кнопки */
 button{
 background:#b48a5a;
 color:white;
@@ -130,26 +160,27 @@ font-weight:bold;
 margin-top:25px;
 }
 
-/* ===== MUSIC BUTTON ===== */
+/* Музыка */
 .music-btn{
 position:fixed;
 bottom:20px;
 right:20px;
-width:65px;
-height:65px;
+width:70px;
+height:70px;
 background:#b48a5a;
 border-radius:50%;
 display:flex;
 align-items:center;
 justify-content:center;
 color:white;
-font-size:28px;
+font-size:30px;
 cursor:pointer;
 box-shadow:0 5px 20px rgba(0,0,0,0.2);
+z-index:10;
 }
 
 .final{
-font-size:36px;
+font-size:40px;
 font-weight:600;
 }
 </style>
@@ -157,18 +188,20 @@ font-weight:600;
 
 <body>
 
-<!-- VIDEO SCREEN -->
+<div class="glow"></div>
+
+<!-- Видео экран -->
 <div class="hero">
 <video autoplay muted loop playsinline>
 <source src="video.mp4" type="video/mp4">
 </video>
 <div>
 <h1>Алмаз & Данагүл</h1>
-<p style="font-size:28px;">10.07.2026</p>
+<p style="font-size:30px;">10.07.2026</p>
 </div>
 </div>
 
-<!-- TEXT -->
+<!-- Текст -->
 <div class="section">
 <div class="box">
 <h2>Құрметті ағайын-туыс, құда-жекжат, дос-жаран!</h2>
@@ -177,7 +210,7 @@ font-weight:600;
 </div>
 </div>
 
-<!-- CALENDAR -->
+<!-- Календарь -->
 <div class="section">
 <h2>Той күні</h2>
 <div class="calendar">
@@ -206,12 +239,12 @@ font-weight:600;
 </div>
 </div>
 
-<!-- LOCATION -->
+<!-- Локация -->
 <div class="section">
 <div class="box">
 <h2>Мекенжай</h2>
 Ақсу қаласы<br>
-Ресторан «Престиж»
+Ресторан «Престиж"
 <br><br>
 <a href="https://2gis.kz/search/Ресторан%20Престиж%20Ақсу" target="_blank" class="map-btn">
 📍 2ГИС арқылы ашу
@@ -219,7 +252,7 @@ font-weight:600;
 </div>
 </div>
 
-<!-- HOSTS -->
+<!-- Той иелері -->
 <div class="section">
 <div class="box">
 <h2>Той иелері</h2>
@@ -231,7 +264,7 @@ font-weight:600;
 <div class="section">
 <div class="box">
 <h2>Қатысуыңызды растаңыз</h2>
-<input type="text" placeholder="Атыңыз" style="width:90%;padding:15px;font-size:20px;"><br>
+<input type="text" placeholder="Атыңыз" style="width:90%;padding:15px;font-size:22px;"><br>
 <label style="font-size:22px;"><input type="radio" name="rsvp"> Әрине, келемін</label><br>
 <label style="font-size:22px;"><input type="radio" name="rsvp"> Келе алмаймын</label><br>
 <label style="font-size:22px;"><input type="radio" name="rsvp"> Жұбайыммен келемін</label><br>
@@ -239,23 +272,22 @@ font-weight:600;
 </div>
 </div>
 
-<!-- FINAL -->
+<!-- Финал -->
 <div class="section">
 <div class="final">
 Келініздер тойымыздың қадірлі қонағы болыныздар!
 </div>
 </div>
 
-<!-- MUSIC -->
+<!-- Музыка -->
 <audio id="music" loop>
-<source src="music.mp3.mp3" type="audio/mpeg">
+<source src="music.mp3" type="audio/mpeg">
 </audio>
 
 <div class="music-btn" onclick="toggleMusic()">🎵</div>
 
 <script>
 const sections=document.querySelectorAll(".section");
-
 const observer=new IntersectionObserver(entries=>{
 entries.forEach(entry=>{
 if(entry.isIntersecting){
@@ -263,21 +295,13 @@ entry.target.classList.add("visible");
 }
 });
 },{threshold:0.3});
-
-sections.forEach(section=>{
-observer.observe(section);
-});
+sections.forEach(section=>observer.observe(section));
 
 let playing=false;
 function toggleMusic(){
 let music=document.getElementById("music");
-if(!playing){
-music.play();
-playing=true;
-}else{
-music.pause();
-playing=false;
-}
+if(!playing){music.play();playing=true;}
+else{music.pause();playing=false;}
 }
 </script>
 
