--- a/index.html
+++ b/index.html
@@ -13,25 +13,32 @@ html{scroll-behavior:smooth;}
 body{
 margin:0;
 font-family:'Cormorant Garamond', serif;
-background: linear-gradient(135deg, #fdf8f3, #f6efe6);
+background:linear-gradient(135deg,#fdf8f3,#f6efe6);
 color:#5a4a42;
 overflow-x:hidden;
 }
 
-/* Орнаменты */
-body::before,
-body::after{
-content:"";
+/* ===== ОРНАМЕНТЫ ===== */
+.ornament{
 position:fixed;
-width:200px;
-height:200px;
-background:url('https://i.imgur.com/5cX1K7Q.png') no-repeat center/contain;
-opacity:0.08;
+width:240px;
+height:240px;
+border-radius:50%;
 pointer-events:none;
 z-index:0;
 }
-body::before{top:0;left:0;}
-body::after{bottom:0;right:0;transform:rotate(180deg);}
+
+.ornament.top-left{
+top:-80px;
+left:-80px;
+background:radial-gradient(circle,#d4b07a 0%,rgba(212,176,122,0.3) 40%,transparent 70%);
+}
+
+.ornament.bottom-right{
+bottom:-80px;
+right:-80px;
+background:radial-gradient(circle,#d4b07a 0%,rgba(212,176,122,0.3) 40%,transparent 70%);
+}
 
 /* Золотое свечение */
 .glow{
@@ -40,13 +47,13 @@ top:50%;
 left:50%;
 width:900px;
 height:900px;
-background:radial-gradient(circle, rgba(180,138,90,0.07), transparent 70%);
+background:radial-gradient(circle,rgba(180,138,90,0.08),transparent 70%);
 transform:translate(-50%,-50%);
 pointer-events:none;
 z-index:0;
 }
 
-/* Видео */
+/* ===== HERO VIDEO ===== */
 .hero{
 position:relative;
 height:100vh;
@@ -91,7 +98,7 @@ align-items:center;
 text-align:center;
 padding:40px;
 opacity:0;
-transform:translateY(50px);
+transform:translateY(60px);
 transition:1.2s;
 font-size:24px;
 line-height:1.8;
@@ -117,7 +124,7 @@ font-size:44px;
 margin-bottom:30px;
 }
 
-/* Календарь */
+/* ===== КАЛЕНДАРЬ ===== */
 .calendar table{
 width:100%;
 max-width:550px;
@@ -125,7 +132,7 @@ border-collapse:collapse;
 font-size:28px;
 }
 
-.calendar td, .calendar th{
+.calendar td,.calendar th{
 padding:14px;
 }
 
@@ -136,7 +143,7 @@ border-radius:50%;
 font-weight:bold;
 }
 
-/* Кнопки */
+/* ===== КНОПКИ ===== */
 button{
 background:#b48a5a;
 color:white;
@@ -160,7 +167,7 @@ font-weight:bold;
 margin-top:25px;
 }
 
-/* Музыка */
+/* ===== МУЗЫКА ===== */
 .music-btn{
 position:fixed;
 bottom:20px;
@@ -188,9 +195,11 @@ font-weight:600;
 
 <body>
 
+<div class="ornament top-left"></div>
+<div class="ornament bottom-right"></div>
 <div class="glow"></div>
 
-<!-- Видео экран -->
+<!-- VIDEO SCREEN -->
 <div class="hero">
 <video autoplay muted loop playsinline>
 <source src="video.mp4" type="video/mp4">
@@ -201,7 +210,7 @@ font-weight:600;
 </div>
 </div>
 
-<!-- Текст -->
+<!-- TEXT -->
 <div class="section">
 <div class="box">
 <h2>Құрметті ағайын-туыс, құда-жекжат, дос-жаран!</h2>
@@ -210,7 +219,7 @@ font-weight:600;
 </div>
 </div>
 
-<!-- Календарь -->
+<!-- CALENDAR -->
 <div class="section">
 <h2>Той күні</h2>
 <div class="calendar">
@@ -239,20 +248,19 @@ font-weight:600;
 </div>
 </div>
 
-<!-- Локация -->
+<!-- LOCATION -->
 <div class="section">
 <div class="box">
 <h2>Мекенжай</h2>
 Ақсу қаласы<br>
-Ресторан «Престиж"
-<br><br>
+Ресторан «Престиж»<br><br>
 <a href="https://2gis.kz/search/Ресторан%20Престиж%20Ақсу" target="_blank" class="map-btn">
 📍 2ГИС арқылы ашу
 </a>
 </div>
 </div>
 
-<!-- Той иелері -->
+<!-- HOSTS -->
 <div class="section">
 <div class="box">
 <h2>Той иелері</h2>
@@ -272,14 +280,14 @@ font-weight:600;
 </div>
 </div>
 
-<!-- Финал -->
+<!-- FINAL -->
 <div class="section">
 <div class="final">
 Келініздер тойымыздың қадірлі қонағы болыныздар!
 </div>
 </div>
 
-<!-- Музыка -->
+<!-- MUSIC -->
 <audio id="music" loop>
 <source src="music.mp3" type="audio/mpeg">
 </audio>
