--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Cormorant+Garamond:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-html{scroll-behavior:smooth;}
+html { scroll-behavior: smooth; }
 
 body{
 margin:0;
@@ -19,38 +19,25 @@ overflow-x:hidden;
 }
 
 /* ===== ОРНАМЕНТЫ ===== */
-.ornament{
+.ornament-top{
 position:fixed;
-width:240px;
-height:240px;
-border-radius:50%;
+top:0;
+left:0;
+width:280px;
+opacity:0.35;
 pointer-events:none;
-z-index:0;
+z-index:1;
 }
 
-.ornament.top-left{
-top:-80px;
-left:-80px;
-background:radial-gradient(circle,#d4b07a 0%,rgba(212,176,122,0.3) 40%,transparent 70%);
-}
-
-.ornament.bottom-right{
-bottom:-80px;
-right:-80px;
-background:radial-gradient(circle,#d4b07a 0%,rgba(212,176,122,0.3) 40%,transparent 70%);
-}
-
-/* Золотое свечение */
-.glow{
+.ornament-bottom{
 position:fixed;
-top:50%;
-left:50%;
-width:900px;
-height:900px;
-background:radial-gradient(circle,rgba(180,138,90,0.08),transparent 70%);
-transform:translate(-50%,-50%);
+bottom:0;
+right:0;
+width:280px;
+opacity:0.35;
+transform:rotate(180deg);
 pointer-events:none;
-z-index:0;
+z-index:1;
 }
 
 /* ===== HERO VIDEO ===== */
@@ -79,31 +66,37 @@ z-index:-2;
 content:"";
 position:absolute;
 top:0;left:0;right:0;bottom:0;
-background:rgba(0,0,0,0.45);
+background:rgba(0,0,0,0.5);
 z-index:-1;
 }
 
 h1{
 font-family:'Parisienne', cursive;
-font-size:100px;
+font-size:110px;
 margin:0;
 }
 
+.hero p{
+font-size:30px;
+margin-top:10px;
+}
+
+/* ===== СЕКЦИИ ===== */
 .section{
-height:100vh;
+min-height:100vh;
 display:flex;
 flex-direction:column;
 justify-content:center;
 align-items:center;
 text-align:center;
-padding:40px;
+padding:60px 30px;
 opacity:0;
 transform:translateY(60px);
 transition:1.2s;
-font-size:24px;
+font-size:26px;
 line-height:1.8;
 position:relative;
-z-index:1;
+z-index:2;
 }
 
 .section.visible{
@@ -113,27 +106,27 @@ transform:translateY(0);
 
 .box{
 background:white;
-padding:45px;
-border-radius:30px;
-box-shadow:0 15px 40px rgba(0,0,0,0.06);
-max-width:750px;
+padding:50px;
+border-radius:35px;
+box-shadow:0 15px 40px rgba(0,0,0,0.07);
+max-width:800px;
 }
 
 h2{
-font-size:44px;
-margin-bottom:30px;
+font-size:48px;
+margin-bottom:35px;
 }
 
 /* ===== КАЛЕНДАРЬ ===== */
 .calendar table{
 width:100%;
-max-width:550px;
+max-width:600px;
 border-collapse:collapse;
-font-size:28px;
+font-size:32px;
 }
 
 .calendar td,.calendar th{
-padding:14px;
+padding:16px;
 }
 
 .highlight{
@@ -148,46 +141,46 @@ button{
 background:#b48a5a;
 color:white;
 border:none;
-padding:16px 35px;
-border-radius:35px;
-font-size:22px;
+padding:18px 40px;
+border-radius:40px;
+font-size:24px;
 cursor:pointer;
-margin-top:20px;
+margin-top:25px;
 }
 
 .map-btn{
 display:inline-block;
 background:#2BB673;
 color:white;
-padding:18px 35px;
-border-radius:40px;
+padding:20px 40px;
+border-radius:45px;
 text-decoration:none;
-font-size:22px;
+font-size:24px;
 font-weight:bold;
-margin-top:25px;
+margin-top:30px;
 }
 
 /* ===== МУЗЫКА ===== */
 .music-btn{
 position:fixed;
-bottom:20px;
-right:20px;
-width:70px;
-height:70px;
+bottom:25px;
+right:25px;
+width:75px;
+height:75px;
 background:#b48a5a;
 border-radius:50%;
 display:flex;
 align-items:center;
 justify-content:center;
 color:white;
-font-size:30px;
+font-size:32px;
 cursor:pointer;
 box-shadow:0 5px 20px rgba(0,0,0,0.2);
 z-index:10;
 }
 
 .final{
-font-size:40px;
+font-size:44px;
 font-weight:600;
 }
 </style>
@@ -195,22 +188,22 @@ font-weight:600;
 
 <body>
 
-<div class="ornament top-left"></div>
-<div class="ornament bottom-right"></div>
-<div class="glow"></div>
+<!-- ОРНАМЕНТЫ -->
+<img src="ornament.png" class="ornament-top">
+<img src="ornament.png" class="ornament-bottom">
 
-<!-- VIDEO SCREEN -->
+<!-- VIDEO -->
 <div class="hero">
 <video autoplay muted loop playsinline>
 <source src="video.mp4" type="video/mp4">
 </video>
 <div>
 <h1>Алмаз & Данагүл</h1>
-<p style="font-size:30px;">10.07.2026</p>
+<p>10.07.2026</p>
 </div>
 </div>
 
-<!-- TEXT -->
+<!-- ТЕКСТ -->
 <div class="section">
 <div class="box">
 <h2>Құрметті ағайын-туыс, құда-жекжат, дос-жаран!</h2>
@@ -219,7 +212,7 @@ font-weight:600;
 </div>
 </div>
 
-<!-- CALENDAR -->
+<!-- КАЛЕНДАРЬ -->
 <div class="section">
 <h2>Той күні</h2>
 <div class="calendar">
@@ -248,7 +241,7 @@ font-weight:600;
 </div>
 </div>
 
-<!-- LOCATION -->
+<!-- МЕКЕНЖАЙ -->
 <div class="section">
 <div class="box">
 <h2>Мекенжай</h2>
@@ -260,7 +253,7 @@ font-weight:600;
 </div>
 </div>
 
-<!-- HOSTS -->
+<!-- ТОЙ ИЕЛЕРІ -->
 <div class="section">
 <div class="box">
 <h2>Той иелері</h2>
@@ -272,15 +265,15 @@ font-weight:600;
 <div class="section">
 <div class="box">
 <h2>Қатысуыңызды растаңыз</h2>
-<input type="text" placeholder="Атыңыз" style="width:90%;padding:15px;font-size:22px;"><br>
-<label style="font-size:22px;"><input type="radio" name="rsvp"> Әрине, келемін</label><br>
-<label style="font-size:22px;"><input type="radio" name="rsvp"> Келе алмаймын</label><br>
-<label style="font-size:22px;"><input type="radio" name="rsvp"> Жұбайыммен келемін</label><br>
+<input type="text" placeholder="Атыңыз" style="width:90%;padding:18px;font-size:24px;"><br>
+<label style="font-size:24px;"><input type="radio" name="rsvp"> Әрине, келемін</label><br>
+<label style="font-size:24px;"><input type="radio" name="rsvp"> Келе алмаймын</label><br>
+<label style="font-size:24px;"><input type="radio" name="rsvp"> Жұбайыммен келемін</label><br>
 <button>Жауап беру</button>
 </div>
 </div>
 
-<!-- FINAL -->
+<!-- ФИНАЛ -->
 <div class="section">
 <div class="final">
 Келініздер тойымыздың қадірлі қонағы болыныздар!
