--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ font-weight:600;
 <!-- ТЕКСТ -->
 <div class="section">
 <div class="box">
-<h2>Құрметті ағайын-туыс, құда-жекжат, дос-жаран!</h2>
+<h2>Құрметті ағайын-туыс, құда-жекжат, дос-жаран, көршілер, әріптестер, жерлестер!</h2>
 Сіздерді біздің отбасымызда өтетін қуанышты тойымыздың құрметті қонағы болуға шын жүректен шақырамыз.<br><br>
 Ақ дастархан жайылып, ән мен күй шырқалатын мерекелік кешімізге келіп, қуанышымызды бірге бөліссеңіздер екен дейміз.
 </div>
