--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Cormorant+Garamond:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-html { scroll-behavior: smooth; }
+html{scroll-behavior:smooth;}
 
 body{
 margin:0;
@@ -23,7 +23,7 @@ overflow-x:hidden;
 position:fixed;
 top:0;
 left:0;
-width:280px;
+width:260px;
 opacity:0.35;
 pointer-events:none;
 z-index:1;
@@ -33,7 +33,7 @@ z-index:1;
 position:fixed;
 bottom:0;
 right:0;
-width:280px;
+width:260px;
 opacity:0.35;
 transform:rotate(180deg);
 pointer-events:none;
@@ -77,7 +77,7 @@ margin:0;
 }
 
 .hero p{
-font-size:30px;
+font-size:32px;
 margin-top:10px;
 }
 
@@ -183,6 +183,19 @@ z-index:10;
 font-size:44px;
 font-weight:600;
 }
+
+/* ===== АДАПТАЦИЯ ДЛЯ ТЕЛЕФОНОВ ===== */
+@media (max-width:768px){
+
+h1{font-size:60px;}
+h2{font-size:32px;}
+.section{font-size:20px;padding:40px 20px;}
+.calendar table{font-size:22px;}
+.final{font-size:28px;}
+.box{padding:30px;}
+.hero p{font-size:22px;}
+
+}
 </style>
 </head>
 
@@ -206,7 +219,7 @@ font-weight:600;
 <!-- ТЕКСТ -->
 <div class="section">
 <div class="box">
-<h2>Құрметті ағайын-туыс, құда-жекжат, дос-жаран, көршілер, әріптестер, жерлестер!</h2>
+<h2>Құрметті ағайын-туыс, құда-жекжат, дос-жаран,көршілер, әріптестер, жерлестер!</h2>
 Сіздерді біздің отбасымызда өтетін қуанышты тойымыздың құрметті қонағы болуға шын жүректен шақырамыз.<br><br>
 Ақ дастархан жайылып, ән мен күй шырқалатын мерекелік кешімізге келіп, қуанышымызды бірге бөліссеңіздер екен дейміз.
 </div>
@@ -265,10 +278,10 @@ font-weight:600;
 <div class="section">
 <div class="box">
 <h2>Қатысуыңызды растаңыз</h2>
-<input type="text" placeholder="Атыңыз" style="width:90%;padding:18px;font-size:24px;"><br>
-<label style="font-size:24px;"><input type="radio" name="rsvp"> Әрине, келемін</label><br>
-<label style="font-size:24px;"><input type="radio" name="rsvp"> Келе алмаймын</label><br>
-<label style="font-size:24px;"><input type="radio" name="rsvp"> Жұбайыммен келемін</label><br>
+<input type="text" placeholder="Атыңыз" style="width:90%;padding:18px;font-size:22px;"><br>
+<label><input type="radio" name="rsvp"> Әрине, келемін</label><br>
+<label><input type="radio" name="rsvp"> Келе алмаймын</label><br>
+<label><input type="radio" name="rsvp"> Жұбайыммен келемін</label><br>
 <button>Жауап беру</button>
 </div>
 </div>
@@ -298,11 +311,23 @@ entry.target.classList.add("visible");
 },{threshold:0.3});
 sections.forEach(section=>observer.observe(section));
 
-let playing=false;
-function toggleMusic(){
 let music=document.getElementById("music");
-if(!playing){music.play();playing=true;}
-else{music.pause();playing=false;}
+let started=false;
+
+/* Автозапуск при первом касании */
+document.addEventListener("click", function(){
+if(!started){
+music.play();
+started=true;
+}
+});
+
+function toggleMusic(){
+if(music.paused){
+music.play();
+}else{
+music.pause();
+}
 }
 </script>
 
