--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@ h2{font-size:32px;}
 <div class="section">
 <h2>Той күні</h2>
 <div class="calendar">
+<h3 class="month-title">Шілде 2026</h3>
 <table>
 <tr>
 <th>Дс</th><th>Сс</th><th>Ср</th><th>Бс</th><th>Жм</th><th>Сб</th><th>Жс</th>
