--- a/index.html
+++ b/index.html
@@ -276,6 +276,19 @@ h2{font-size:32px;}
 
 <!-- Финал -->
 <div class="section">
+<div class="box">
+<h2>Қатысуыңызды растаңыз</h2>
+
+<iframe 
+src="https://forms.gle/AwpXnrFFjr84wLw58"
+width="100%" 
+height="650" 
+style="border:none;border-radius:30px;">
+Загрузка…
+</iframe>
+
+</div>
+</div>
 <div style="font-size:40px;font-weight:600;">
 Келініздер тойымыздың қадірлі қонағы болыныздар!
 </div>
