--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ h2{font-size:32px;}
 <div class="section">
 <div class="box">
 <h2>Той бағдарламасы</h2>
-<div class="schedule-item">🕔 17:00 – Қонақтардың жиналуы</div>
+<div class="schedule-item">🕔 16:00 – Қонақтардың жиналуы</div>
 <div class="schedule-item">🕕 18:00 – Беташар рәсімі</div>
 <div class="schedule-item">🕗 21:00 – Торт шығару</div>
 </div>
@@ -170,7 +170,7 @@ h2{font-size:32px;}
 <div class="section">
 <div class="box">
 <h2>Қатысу</h2>
-<a href="ТУТ_ССЫЛКА_НА_ФОРМУ" target="_blank" class="rsvp-btn">
+<a href="https://forms.gle/T8AyLJbGfZkXR5QR9" target="_blank" class="rsvp-btn">
 Қатысуымды растау
 </a>
 </div>
