--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ h2{font-size:32px;}
 <!-- Текст -->
 <div class="section">
 <div class="box">
-<h2>Құрметті ағайын-туыс, құда-жекжат, дос-жаран!</h2>
-Сіздерді біздің отбасымызда өтетін қуанышты тойымыздың құрметті қонағы болуға шын жүректен шақырамыз.<br><br>
-Ақ дастархан жайылып, ән мен күй шырқалатын мерекелік кешімізге келіп, қуанышымызды бірге бөліссеңіздер екен дейміз.
+<h2>Құрметті ағайын-туыс, құда-жекжат, дос-жаран, көршілер,әріптестер,жерлестер!</h2>
+Сіздерді біздің отбасымызда көптен күткен қуанышты тойымыздың құрметті қонағы болуға шын жүректен шақырамыз.<br><br>
+Ақ дастархан жайылып, ән мен күй шырқалатын мерекелік кешімізге келіп, қуанышымызды бірге бөліссеңіздер.
 </div>
 </div>
 
