--- a/index.html
+++ b/index.html
@@ -166,6 +166,19 @@ h2{font-size:32px;}
 </div>
 </div>
 
+  <!-- ТОЙ ИЕЛЕРІ -->
+<div class="section">
+<div class="box">
+
+<h2>Той иелері</h2>
+
+<div class="hosts-names">
+Серик – Рауза
+</div>
+
+</div>
+</div>
+
 <!-- RSVP Кнопка -->
 <div class="section">
 <div class="box">
